--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --fix --ext .ts,.tsx ./src",
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
@@ -29,8 +30,11 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "babel-eslint": "^11.0.0-beta.2",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
