--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "yarn format",
+      "yarn lint"
+    ]
   }
 }
