--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-config": "^1.5.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
