--- a/ios/MovieFinder/Info.plist
+++ b/ios/MovieFinder/Info.plist
@@ -46,7 +46,7 @@
 		<string>fonts/MaterialIcons.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>BootSplash.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
