--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-bootsplash": "^4.7.5",
     "react-native-config": "^1.5.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
