--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint --fix --ext .ts,.tsx ./src",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "set-reactotron": "adb reverse tcp:9090 tcp:9090"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
@@ -42,6 +43,8 @@
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3",
     "typescript": "4.8.4"
   },
   "engines": {
