--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2"
   },
