--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.72.3",
     "react-native-bootsplash": "^4.7.5",
     "react-native-config": "^1.5.1",
+    "react-native-linear-gradient": "^2.8.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
